# SystemDesign

./: README.md
01/: README.md  workspace.dsl
02/file_storage_service/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
02/file_storage_service/configs/: config_vars.docker.yaml  static_config.yaml
02/file_storage_service/src/: main.cpp
02/file_storage_service/src/dto/files/: file_dto.cpp  file_dto.hpp
02/file_storage_service/src/models/: file_item.hpp
02/file_storage_service/src/storage/: in_memory_storage.cpp  in_memory_storage.hpp  storage_component.cpp  storage_component.hpp
02/file_storage_service/src/views/auth/: login_handler.hpp
02/file_storage_service/tests/: test_folders.py
03/: CMakeLists.txt  README.md  docker-compose.yml  pytest.ini  user.json
03/.devcontainer/: devcontainer.json
03/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
03/src/: main.cpp
03/src/auth/: jwt_auth_checker.cpp
03/src/dto/files/: file_dto.hpp
03/src/dto/users/: user_dto.hpp
03/src/models/: user.hpp
03/src/storage/: storage_component.cpp  storage_component.hpp
03/src/views/auth/: login_handler.hpp
03/src/views/files/: delete_handler.hpp
03/src/views/folders/: create_handler.hpp  delete_handler.cpp  get_all_handler.cpp
04/: CMakeLists.txt  docker-compose.yml  login.json  optimization.md
04/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
04/mongo/: schema_design.md
04/sql/: schema.sql
04/src/: main.cpp
04/src/auth/: jwt_auth_checker.hpp
04/src/dto/files/: file_dto.cpp
04/src/storage/: mongo_folder_storage.cpp  mongo_storage_component.cpp  mongo_storage_component.hpp  postgres_storage.hpp
04/src/utils/: string_utils.cpp
04/src/views/auth/: login_handler.cpp
04/src/views/files/: create_handler.hpp  get_by_name_handler.hpp
04/src/views/folders/: create_handler.cpp  delete_handler.hpp  get_all_handler.hpp
04/src/views/mongo_folders/: create_handler.cpp  create_handler.hpp  delete_handler.cpp  delete_handler.hpp  get_all_handler.cpp  get_all_handler.hpp
04/src/views/users/: create_handler.cpp  search_handler.cpp
04/tests/: test_users.py
05/: README.md  performance_design.md
05/file_storage_service/: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  mongo-folder.json  performance_design.md
05/file_storage_service/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  secdist.dev.json  static_config.yaml
05/file_storage_service/docs/: openapi.yaml
05/file_storage_service/mongo/: data.js  indexes.js  queries.js  validation.js
05/file_storage_service/sql/: generate_data.py  queries.sql
05/file_storage_service/src/: main.cpp
05/file_storage_service/src/cache/: redis_cache_component.cpp  redis_cache_component.hpp
05/file_storage_service/src/dto/auth/: auth_dto.cpp  (+1 more)
05/file_storage_service/src/models/: file_item.hpp  folder.hpp
05/file_storage_service/src/storage/: mongo_folder_storage.hpp  postgres_storage.cpp
05/file_storage_service/src/utils/: string_utils.hpp
05/file_storage_service/tests/: conftest.py  test_auth.py  test_files.py
(+34 files in other folders)
